--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 col-sm-6">
-        <h4><strong>VEHICLE - 2NKHHJ7X2EM422350</strong></h4>
+        <h4><strong>VEHICLE - <span class="vehicleId"></span></strong></h4>
       </div>
     </div>
     <div class="row">
@@ -28,7 +28,7 @@
       <div class="col-sm-12 col-md-5 mapColumn">
         <div class="card mapContainer">
           <div id="map">
-            <h5 class='chartTitle'>Business Points - 2014</h5>
+            <h5 class='chartTitle'>Business Points - <span class="businessYear"></span></h5>
             <div class="clearfix"></div>
           </div>
         </div>
